# fastapi-mc

./: .coverage  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
fastapi_masterclass.egg-info/: PKG-INFO  SOURCES.txt
requirements/: dev.txt  test.txt
src/app/: main.py
src/fastapi_masterclass.egg-info/: SOURCES.txt
tests/: test_health.py
